--- a/BackMatter/Recomendations.tex
+++ b/BackMatter/Recomendations.tex
@@ -1,4 +1,4 @@
-\begin{recomendations}
+\begin{recomendations}\label{recomendations}
 
 El enfoque de meta-learning presentado en esta Tesis es utilizable en problemas prácticos y proporciona información importante en el proceso de AutoML, lo que le permite obtener mejores resultados en la búsqueda de flujos de algoritmos. Sin embargo, aún se encuentra en una etapa de desarrollo inicial, por lo que es necesario seguir mejorando sus capacidades mediante un estudio más exhaustivo.
 
