--- a/FrontMatter/Abstract.tex
+++ b/FrontMatter/Abstract.tex
@@ -1,6 +1,7 @@
+% !TeX spellcheck = en_GB
 \section*{Abstract}
 
-The field of machine learning (AutoML) has been highlighted as one of the main alternatives for finding good solutions for complex machine learning problems. Despite the recent success of AutoML, many challenges remain. Learning AutoML is a time-consuming process and can be inefficient. Meta-learning is described as the process of learning from past experiences by applying various learning algorithms on different types of data, and therefore reduces the time required to learn new tasks. One of the advantages of meta-learning techniques is that they can serve as an efficient support for the AutoML process, learning from previous tasks the best algorithms to solve a certain type of problem. In this way, it is possible to speed up the AutoML process, obtaining better results in the same period of time. The objective of this thesis is to design a meta-learning strategy for generic domains in machine learning.
+The field of machine learning (AutoML) has been highlighted as one of the main alternatives for finding good solutions for complex machine learning problems. Despite the recent success of AutoML, many challenges remain. Learning AutoML is a time-consuming process and can be computationally inefficient. Meta-learning is described as the process of learning from past experiences by applying various learning algorithms on different types of data, and therefore reduces the time required to learn new tasks. One of the advantages of meta-learning techniques is that they can serve as an efficient support for the AutoML process, learning from previous tasks the best algorithms to solve a certain type of problem. In this way, it is possible to speed up the AutoML process, obtaining better results in the same period of time. The objective of this thesis is to design a meta-learning strategy for generic domains in machine learning.
 
 The implemented meta-learning proposal is capable of tackling a wide variety of tasks by selecting features capable of representing the space defined by them.
 % In addition, by exploring the interaction between the characteristics of the datasets and the structure of the flows, the proposed method is capable of identifying flows with good performance without performing a computationally expensive analysis.
