--- a/MainMatter/Background.tex
+++ b/MainMatter/Background.tex
@@ -20,7 +20,7 @@ El término meta-learning ocurrió por primera vez en el área de psicología ed
 
 Meta-learning usada en el contexto de aprendizaje automático tiene muchas similitudes a esta descripción. El conocimiento de una materia se traduce en \textit{base-learning}, donde la experiencia es acumulada para una tarea en específico. Meta-learning empieza en un nivel mayor y se encarga de acumular experiencia sobre varias aplicaciones de un sistema de aprendizaje~\cite{hospedales2021metalearning}.
 
-Debido al creciente poder de computación y gran disponibilidad de conjuntos de datos en los últimos 20 años, la investigación de aprendizaje automático enfrentó un creciente número de algoritmos disponibles, incluyendo multitudes de parametrizaciones, enfoques de pre-procesamiento y post-procesamiento, así como una gran variedad de aplicaciones~\cite{lemke2013metalearning}. Promoviendo un mejor entendimiento del aprendizaje automático en sí, meta-learning puede ser de una ayuda invaluable, evitando procedimientos extensivos de prueba y error para la selección de algoritmos. Además, puede permitir entender mejor que hace a un determinado algoritmo desempeñarse bien en un determinado problema. En esta sección se estudia la definición de meta-learning, la estructura de un sistema de meta-learning y algunas de sus aplicaciones.
+Debido al creciente poder de computación y gran disponibilidad de conjuntos de datos en los últimos 20 años, la investigación de aprendizaje automático enfrentó un creciente número de algoritmos disponibles, incluyendo multitudes de parametrizaciones, enfoques de pre-procesamiento y pos-procesamiento, así como una gran variedad de aplicaciones~\cite{lemke2013metalearning}. Promoviendo un mejor entendimiento del aprendizaje automático en sí, meta-learning puede ser de una ayuda invaluable, evitando procedimientos extensivos de prueba y error para la selección de algoritmos. Además, puede permitir entender mejor que hace a un determinado algoritmo desempeñarse bien en un determinado problema. En esta sección se estudia la definición de meta-learning, la estructura de un sistema de meta-learning y algunas de sus aplicaciones.
 
 \subsection{Definición}\label{subsec:mtl-definition}
 
@@ -202,8 +202,6 @@ A causa de esta variedad en los espacios de hiperparámetros, los algoritmos de 
 
 Entonces según la definición de Feurer et al~\cite{fuerer2019hyperparameter}, dado un conjunto de datos $D$, el problema de HPO general está definido como:
 
-$\underset{below}{above}$
-
 \begin{equation}
 	\lambda^* = \underset{\lambda \in \Lambda}{argmin} \textbf{E}_{(D_{train}, D_{valid}) \sim  D}\textbf{V}(L, a_\lambda, D_{train}, D_{valid}),
 \end{equation}
@@ -334,7 +332,7 @@ Esta estrategia de búsqueda ha sido ampliamente usada en diversos sistemas de A
 
 Hyperopt \cite{bergstra2013hyperopt} y Auto-Sklearn \cite{fuerer2015efficient} fueron dos sistemas posteriores de AutoML que también utilizan dos optimizadores bayesianos: SMAC y TPE respectivamente. Además de abordar el problema de CASH con SMAC, Auto-Sklearn emplea meta-learning para empezar la optimización bayesiana con buenas configuraciones \cite{fuerer2015initializing} evaluada en datasets similares. Auto-Sklearn además aplica \textit{ensemble learning}, construyendo \textit{ensembles} de los modelos evaluados con SMAC \cite{hutter2011sequential} para reducir el riesgo de hacer sobreajuste (\textit{overfitting}). \textit{Ensemble Learning} es un paradigma del aprendizaje automático donde múltiples modelos (a menudo llamados ``modelos débiles'') son entrenados para solucionar el mismo problema y combinarlos para obtener mejores resultados.
 
-La optimización bayesiana ha sido también utilizada en redes neuronales modernas. Uno de las primeras herramientas en usar esta técnica fue Auto-Net~\cite{mendoza2016towards}, un sistema que automáticamente configura redes neuronales con SMAC siguiendo el mismo enfoque de AutoML que Auto-WEKA y Auto-Sklearn. Para la primera version de Auto-Net este sistema está implementado dentro de Auto-Sklearn añadiendo un nuevo componente de clasificación y regresión. Auto-Net está limitado a las redes neuronales completamente conectadas y utiliza la biblioteca de Python \texttt{Lasagne}~\cite{lasagne}, la cual está construida sobre Theano~\cite{theano2016theano}.
+La optimización bayesiana ha sido también utilizada en redes neuronales modernas. Uno de las primeras herramientas en usar esta técnica fue Auto-Net~\cite{mendoza2016towards}, un sistema que automáticamente configura redes neuronales con SMAC siguiendo el mismo enfoque de AutoML que Auto-WEKA y Auto-Sklearn. Para la primera versión de Auto-Net este sistema está implementado dentro de Auto-Sklearn añadiendo un nuevo componente de clasificación y regresión. Auto-Net está limitado a las redes neuronales completamente conectadas y utiliza la biblioteca de Python \texttt{Lasagne}~\cite{lasagne}, la cual está construida sobre Theano~\cite{theano2016theano}.
 
 Otro sistema que usa BO para abordar el problema de NAS es Auto-Keras \cite{jin2019auto}. En esta herramienta se utiliza la optimización bayesiana para guiar el morfismo de la red para una búsqueda efectiva de arquitecturas neuronales. Como modelos sustitutos usan procesos gausianos (GPs) y como funciones de adquisición \textit{Upper Confidence Bound} (Límite de Confianza Superior).
 
@@ -622,7 +620,7 @@ Además de estas meta-características de propósito general, otros conjuntos de
 
 Además de definir manualmente las meta-características, uno puede aprender una representación conjunta para un grupo de tareas. 
 
-Un ejemplo de solución a la generación automática de meta-características es descomponer las meta-características en tres componentes: \texttt{meta-función}, \texttt{objeto} y  \texttt{post-procesamiento} \cite{Pinto2016TowardsAG, pinto2014framework}. Una \texttt{meta-función} (por ejemplo, entropía) es aplicado a un \texttt{objeto} (por ejemplo, un conjunto de variables que representan un atributo) y el resultado es \texttt{post-procesado} (por ejemplo, el promedio), resultando en una meta-característica (por ejemplo, el promedio de la entropía de un atributo) %La generación automática de meta-features está motivada por la selección de una \textit{meta-function} usada para generar sistemáticamente meta-features de todas las posibles combinaciones de alternativas de \texttt{objetos} y \texttt{post-procesamiento} 
+Un ejemplo de solución a la generación automática de meta-características es descomponer las meta-características en tres componentes: \texttt{meta-función}, \texttt{objeto} y  \texttt{pos-procesamiento} \cite{Pinto2016TowardsAG, pinto2014framework}. Una \texttt{meta-función} (por ejemplo, entropía) es aplicado a un \texttt{objeto} (por ejemplo, un conjunto de variables que representan un atributo) y el resultado es \texttt{pos-procesado} (por ejemplo, el promedio), resultando en una meta-característica (por ejemplo, el promedio de la entropía de un atributo) %La generación automática de meta-features está motivada por la selección de una \textit{meta-function} usada para generar sistemáticamente meta-features de todas las posibles combinaciones de alternativas de \texttt{objetos} y \texttt{pos-procesamiento} 
 
 \textit{Exploratory Factor Analysis} (EFA) es otro método que ha sido utilizado para estudiar el poder predictivo de diferentes meta-características empleadas en OpenML \cite{bilalli2017predictive}. OpenML es una plataforma colaborativa de aprendizaje automático que está diseñada para guardar y organizar meta-datos sobre datasets, algoritmos de minería de datos, modelos y sus evaluaciones. EFA, más específicamente \textit{Principal Component Analysis} (PCA), ha sido usado para extraer las características latentes, las cuales son conceptos abstractos que agrupan meta-características con propiedades comunes. Estas características latentes son utilizadas para realizar meta-learning, y se ha demostrado que su método mejora el proceso de meta-learning~\cite{bilalli2017predictive}.
 
@@ -705,7 +703,7 @@ Este sistema mejora los métodos existentes de AutoML tomando en cuenta automát
 	\item En la fase online, dado un nuevo dataset \textit{D}, se calculan las meta-características, todos los datasets se rankean por su distancia $L_1$ a \textit{D} en el espacio de meta-características y se seleccionan las inicializaciones del framework de ML guardadas para los \textit{k} datasets más cercanos. Luego se utilizan estas \textit{k} configuraciones para iniciar la optimización bayesiana.
 \end{itemize}
 
-\textit{Alpine Meadow} (\textit{Interactive Automated Machine Learning Tool}) \cite{shang2019democratizing} es otro sistema de AutoML que se especializa en su enfoque en el diseño sistemático y algorítmico. Por un lado demuestran cómo optimizaciones basadas en reglas, pueden ser combinadas con MAB y la optimización bayesiana y meta-learning para encontrar más eficientemente la mejor solución de ML para un problema dado. Por otro lado, idean un algoritmo de selección de algorimtos adaptativo para podar algoritmos no prometedores comparando los errores de entrenamiento y validación en instancias de entrenamiento incrementalmente mayores en el tamaño de la muestra. Emplea el mecanismo de meta-learning para proveer al usuario con una respuesta rápida, en pocos segundos, con una recomendación de un modelo inicial que puede alcanzar una precisión razonable mientras, en el \textit{back-end}, lleva a cabo un proceso de optimización para que así pueda recomendar al usuario más modelos con mejor precisión, a medida que progresa el proceso de búsqueda sobre el espacio de búsqueda. El proceso de meta-learning está basado en el de Auto-Sklearn, se proponen varias meta-características y una función de distancia basada en los rendimientos de un conjunto fijo de \textit{n} flujos de algoritmos representativos en los dos datasets. Para el proceso de entrenamiento se usaron 300 datasets: 220 de clasificación y 80 de regresión; el proceso de prueba se realizó con 150 datasets: 110 de clasificación y 40 de regresión.
+\textit{Alpine Meadow} (\textit{Interactive Automated Machine Learning Tool}) \cite{shang2019democratizing} es otro sistema de AutoML que se especializa en su enfoque en el diseño sistemático y algorítmico. Por un lado demuestran cómo optimizaciones basadas en reglas, pueden ser combinadas con MAB y la optimización bayesiana y meta-learning para encontrar más eficientemente la mejor solución de ML para un problema dado. Por otro lado, idean un algoritmo de selección de algoritmos adaptativo para podar algoritmos no prometedores comparando los errores de entrenamiento y validación en instancias de entrenamiento incrementalmente mayores en el tamaño de la muestra. Emplea el mecanismo de meta-learning para proveer al usuario con una respuesta rápida, en pocos segundos, con una recomendación de un modelo inicial que puede alcanzar una precisión razonable mientras, en el \textit{back-end}, lleva a cabo un proceso de optimización para que así pueda recomendar al usuario más modelos con mejor precisión, a medida que progresa el proceso de búsqueda sobre el espacio de búsqueda. El proceso de meta-learning está basado en el de Auto-Sklearn, se proponen varias meta-características y una función de distancia basada en los rendimientos de un conjunto fijo de \textit{n} flujos de algoritmos representativos en los dos datasets. Para el proceso de entrenamiento se usaron 300 datasets: 220 de clasificación y 80 de regresión; el proceso de prueba se realizó con 150 datasets: 110 de clasificación y 40 de regresión.
 
 SmartML \cite{maher2019smartml} está equipado con una base de conocimiento constantemente actualizada que guarda información sobre las meta-características de todos los datasets procesados con su rendimiento asociado de los diferentes clasificadores y sus parámetros ajustados. Para cada dataset nuevo SmartML automáticamente extrae sus meta-características y busca en su base de conocimiento el algoritmo que mejor rendimiento tenga para empezar su proceso de optimización. Una vez elegido el algoritmo, usa optimización bayesiana basada en SMAC para la optimización de hiperparámetros. Sigue el mismo procedimiento basado en meta-características de Auto-sklearn para determinar datasets similares, utilizando el enfoque de vecinos cercanos, el cual está seguido por un mecanismo ponderado entre dos factores diferentes para elegir los algoritmos de los datasets similares más prometedores:
 
@@ -716,7 +714,7 @@ SmartML \cite{maher2019smartml} está equipado con una base de conocimiento cons
 
 Por ejemplo, puede ser mejor seleccionar los \textit{n} mejores algoritmos de un solo dataset similar que seleccionar el mejor algoritmo de \textit{n} dataset similares. Para la construcción de la base de conocimiento, SmartML usa 50 datasets de OpenML, UCI y Kaggle. Uno de sus aportes más innovadores es la integración del paquete \textit{Interpretable Machine Learning} (iml) para explicar al usuario las características más importantes que han sido utilizadas por el modelo seleccionado para dirigir su proceso de predicción.
 
-MOSAIC (\textbf{MO}nte-Carlo tree \textbf{S}earch for \textbf{A}lgor\textbf{I}thm \textbf{C}onfiguration) \cite{rakotoarison2019automated} es un enfoque de AutoML basado en Monte-Carlo Tree Search (MCTS), que fue presentado para manejar las estructuras híbridas de AutoML y el problema costoso de optimización de caja negra paremétrico. La novedad de MOSAIC es que aborda el problema de optimización estructural y paramétrico usando 2 estrategias asociadas: MCTS es utilizada para abordar la optimización de la estructura \textbf{a} y la optimización bayesiana es usada para abordar la optimización paramétrica de $\omega(a)$, donde el acoplamiento es asegurado mediante los modelos sustitutos. Tiene disponible varias variantes para la inicialización del proceso de búsqueda:
+MOSAIC (\textbf{MO}nte-Carlo tree \textbf{S}earch for \textbf{A}lgor\textbf{I}thm \textbf{C}onfiguration) \cite{rakotoarison2019automated} es un enfoque de AutoML basado en Monte-Carlo Tree Search (MCTS), que fue presentado para manejar las estructuras híbridas de AutoML y el problema costoso de optimización de caja negra paramétrico. La novedad de MOSAIC es que aborda el problema de optimización estructural y paramétrico usando 2 estrategias asociadas: MCTS es utilizada para abordar la optimización de la estructura \textbf{a} y la optimización bayesiana es usada para abordar la optimización paramétrica de $\omega(a)$, donde el acoplamiento es asegurado mediante los modelos sustitutos. Tiene disponible varias variantes para la inicialización del proceso de búsqueda:
 
 \begin{itemize}
 	\item MOSAIC.Vanilla: la inicialización comienza de la forma clásica, con un conjunto inicial aleatorio.
@@ -884,7 +882,7 @@ Auto-Pytorch \cite{zimmer2021auto} es un ejemplo de estos sistemas que usan port
  % para minimizar su \textit{relative regret} promedio sobre todos los meta datasets. En la primera iteración la mejor configuración en promedio para todos los datasets es añadida al portafolio. En todas las iteraciones subsecuentes, son añadidas configuraciones que tienden a ser más especializadas a subconjuntos de los datasets, para los cuales son posibles mejoras. 
  Las configuraciones son añadidas de esta manera hasta que un tamaño predefinido del portafolio es alcanzado. Limitando el tamaño del portafolio se balancea entre empezar con configuraciones prometedoras y la sobrecarga inducida por el primer portafolio ejecutado. Este enfoque asume (como todos los enfoques de meta-learning) que tenemos acceso a un conjunto razonable de datasets de meta-entrenamiento que son representativos de los datases de meta-prueba. Para la creación del portafolio en Auto-Pytorch se usaron 100 datasets de OpenML.
 
-Auto-sklearn 2.0 \cite{Feurer2020AutoSklearn2T} es una extensión de Auto-sklearn que presenta una técnica de meta-learning más simple y perfecciona su manera de manejar algoritmos iterativos, mejorandolo con una estrategia de MAB para la asignación de presupuesto. Debido a varios problemas encontrados en el uso de meta-características en el algoritmo de meta-learning de Auto-sklearn, proponen un nuevo enfoque libre de meta-características, haciendo uso de un portafolio, un conjunto de configuraciones complementarias que cubren tantos datasets diversos como sea posible y minimiza el riesgo de fallo cuando se enfrenta en una nueva tarea. Para ello hacen una matriz de rendimiento, guardando el rendimiento de un conjunto de algoritmos de ML en varios datasets. Luego para seleccionar algoritmos del portafolio basado en un nuevo dataset utilizan un algoritmo \textit{greedy}. Mientras el enfoque anterior de meta-learning seguido por Auto-sklearn (\textit{k-nearest neighbors}) tiene el objetivo de usar solo configuraciones que actúan bien, un portafolio es construido de tal manera que al menos hay una configuración que funciona bien, la cual además proporciona una forma diferente de diseño inicial para su algoritmo de optimización.
+Auto-sklearn 2.0 \cite{Feurer2020AutoSklearn2T} es una extensión de Auto-sklearn que presenta una técnica de meta-learning más simple y perfecciona su manera de manejar algoritmos iterativos, mejorándolo con una estrategia de MAB para la asignación de presupuesto. Debido a varios problemas encontrados en el uso de meta-características en el algoritmo de meta-learning de Auto-sklearn, proponen un nuevo enfoque libre de meta-características, haciendo uso de un portafolio, un conjunto de configuraciones complementarias que cubren tantos datasets diversos como sea posible y minimiza el riesgo de fallo cuando se enfrenta en una nueva tarea. Para ello hacen una matriz de rendimiento, guardando el rendimiento de un conjunto de algoritmos de ML en varios datasets. Luego para seleccionar algoritmos del portafolio basado en un nuevo dataset utilizan un algoritmo \textit{greedy}. Mientras el enfoque anterior de meta-learning seguido por Auto-sklearn (\textit{k-nearest neighbors}) tiene el objetivo de usar solo configuraciones que actúan bien, un portafolio es construido de tal manera que al menos hay una configuración que funciona bien, la cual además proporciona una forma diferente de diseño inicial para su algoritmo de optimización.
 
 \subsubsection{Diseño del espacio de configuración}
 
@@ -947,7 +945,7 @@ OBOE ejecuta un conjunto particular de modelos correspondientes a un subconjunto
 
 PMF \cite{fusi2018advances} soluciona la tarea de la selección automática de una secuencia de algoritmos de ML de aprendizaje automático usando ideas de filtrado colaborativo y optimización bayesiana. PMF considera que dos dataset son similares si tienen evaluaciones similares en un pequeño conjunto de flujos de algoritmos y, por lo tanto, es más probable que estos datasets tengan similares evaluaciones en el resto de los flujos. En particular, PMF entrena cada flujo de aprendizaje automático en una muestra de cada dataset y entonces evalúa dicho flujo. Esto resulta en una matriz que resume el rendimiento de cada flujo de aprendizaje automático de cada dataset. El problema de predecir el rendimiento de un flujo particular en un nuevo dataset es relacionado con un problema de factorización de matrices.
 
-ActivMetaL \cite{activmetal} es otro sistema de AutoML que utiliza esta técnica de meta-learning. Adoptan el punto de vista de filtrado colaborativo de los sistemas de recomendación en el cual el problema es reducido a un problema de datos faltantes: dado una matriz esparcidamente populada de rendimientos de algoritmos en determinadas tareas, predecir los rendimientos faltantes; más particularmente, predecir cuál algoritmo será mejor en un nuevo dataset (fila vacía). Esto lo hacen usando el algoritmo de recomendación CofiRank \cite{weimar2007cofirank}. Formalmente, su objetivo es, dado una matriz de rendimiento histórico en diferentes datasets, buscar lo más rápido posible el modelo con el mejor rendimiento en el nuevo dataset. Esto es realizado mediante un enfoque de \textit{active meta-learning}, en el que una vez evaluado un primer algoritmo en un nuevo dataset, el siguiente es seleccionado con \textit{active learning}. Una vez incializado con el rendimiento de un conjunto de algoritmos en el nuevo dataset, el algoritmo de recomendación CofiRank es utilizado para retornar un ranking de algoritmos en el nuevo dataset. % El nuevo enfoque de \textit{active meta-learning} presentado en este trabajo propone un enfoque diferente para inicializar, no requiriendo meta-features externos, en su lugar las puntuaciones de algoritmos previamente evaluados son usados como meta-features.
+ActivMetaL \cite{activmetal} es otro sistema de AutoML que utiliza esta técnica de meta-learning. Adoptan el punto de vista de filtrado colaborativo de los sistemas de recomendación en el cual el problema es reducido a un problema de datos faltantes: dado una matriz esparcidamente populada de rendimientos de algoritmos en determinadas tareas, predecir los rendimientos faltantes; más particularmente, predecir cuál algoritmo será mejor en un nuevo dataset (fila vacía). Esto lo hacen usando el algoritmo de recomendación CofiRank \cite{weimar2007cofirank}. Formalmente, su objetivo es, dado una matriz de rendimiento histórico en diferentes datasets, buscar lo más rápido posible el modelo con el mejor rendimiento en el nuevo dataset. Esto es realizado mediante un enfoque de \textit{active meta-learning}, en el que una vez evaluado un primer algoritmo en un nuevo dataset, el siguiente es seleccionado con \textit{active learning}. Una vez inicializado con el rendimiento de un conjunto de algoritmos en el nuevo dataset, el algoritmo de recomendación CofiRank es utilizado para retornar un ranking de algoritmos en el nuevo dataset. % El nuevo enfoque de \textit{active meta-learning} presentado en este trabajo propone un enfoque diferente para inicializar, no requiriendo meta-features externos, en su lugar las puntuaciones de algoritmos previamente evaluados son usados como meta-features.
 
 \quad
 
