--- a/MainMatter/Introduction.tex
+++ b/MainMatter/Introduction.tex
@@ -23,7 +23,7 @@ Una de las limitaciones presentes en los primeros sistemas de AutoML consiste en
 
 A pesar de la creciente cantidad de herramientas de AutoML desarrolladas en los últimos años, la generación automática de soluciones de ML es computacionalmente costosa y toma mucho tiempo~\cite{crisan2021fits}. Las razones de estos defectos incluyen un espacio de búsqueda muy grande, tanto para algoritmos simples de ML como para otras arquitecturas más complejas como redes neuronales, y que la evaluación de incluso un solo algoritmo en un dataset grande puede requerir horas. La optimización de los hiperparámetros, que es el núcleo de los sistemas de AutoML, es también un proceso generalmente lento, principalmente al principio al buscar en un espacio de hiperparámetros tan grande como aquellos presentes en un \textit{framework} de ML~\cite{fuerer2015efficient}. Esto hace que el proceso de desarrollo de modelos de ML siga siendo un proceso lento, limitando la aplicabilidad de AutoML a problemas prácticos en la industria, así como su potencial para acelerar la investigación científica~\cite{crisan2021fits}.
 
-Otro de los problemas de la mayoría de los enfoques existentes de AutoML es su inhabilidad de aprender de los datasets previamente analizados, lo que los fuerza a aprender desde el principio con cada dataset nuevo. Esta ``pérdida de memoria'' hace que las herramientas de AutoML procesen innecesariamente soluciones inválidas. % Por ejemplo, no son capaces de preveer que con pocos datos una red neuronal no va a obtener buenos resultados. 
+Otro de los problemas de la mayoría de los enfoques existentes de AutoML es su inhabilidad de aprender de los datasets previamente analizados, lo que los fuerza a aprender desde el principio con cada dataset nuevo. Esta ``pérdida de memoria'' hace que las herramientas de AutoML procesen innecesariamente soluciones inválidas. % Por ejemplo, no son capaces de prever que con pocos datos una red neuronal no va a obtener buenos resultados. 
 
 % Although progress in AutoML is vast, the considered scenarios are somewhat constrained, e.g., in the type of approached problem, in the assumptions on data, in the size of datasets, etc. In this context, one of the most desirable features for AutoML methods is to work under a lifelong machine learning (LML) setting. LML refers to systems that can sequentially learn many tasks from one or more domains in its lifetime, these systems (not restricted to supervised learning) require the ability to retain knowledge, adapt to changes and transfer knowledge when learning a new task. An AutoML method that learns from different tasks and that is able to adapt itself during its lifetime would comprise a competitive and robust all-problem machine learning solution. (drift)
 
@@ -32,7 +32,7 @@ Otro de los problemas de la mayoría de los enfoques existentes de AutoML es su 
 
 En esta tesis se realiza una propuesta para superar estos obstáculos. El principal objetivo del enfoque propuesto es asistir a los profesionales de la industria y a los investigadores en ciencias de datos en la selección de modelos incorporando un componente en los sistemas AutoML. Este componente acelerará la búsqueda de AutoML proveyendo un conjunto inicial de algoritmos y las configuraciones de sus hiperparámetros. Esta recomendación inicial deberá en última instancia dar mejores resultados mediante el análisis previo de problemas relacionados. Por lo tanto, esta característica tiene como objetivo emular el rol del experto en el campo de aprendizaje automático. Con el fin de lograr esto, se hace uso de técnicas de meta-learning. 
 
-% Aunque a través meta-learning se pueden sugerir rápidamente algunas inicializaciones de los algoritmos de ML que son probables que tengan buenos resultados, no es posible obtener información detallada sobre sus rendimientos. En constraste, los algoritmos de optimización usados en herramientas de AutoML son lentos al buscar en grandes espacios de hiperparámetros, pero son capaces de obtener informacción más detallada sobre el rendimiento de los algoritmos de ML. Es por esto que el enfoque de meta-learning propuesto es complementario al proceso de optimización, seleccionando \textit{k} configuraciones de meta-learning y usando su resultado para inicializar el proceso de optimización.
+% Aunque a través meta-learning se pueden sugerir rápidamente algunas inicializaciones de los algoritmos de ML que son probables que tengan buenos resultados, no es posible obtener información detallada sobre sus rendimientos. En contraste, los algoritmos de optimización usados en herramientas de AutoML son lentos al buscar en grandes espacios de hiperparámetros, pero son capaces de obtener información más detallada sobre el rendimiento de los algoritmos de ML. Es por esto que el enfoque de meta-learning propuesto es complementario al proceso de optimización, seleccionando \textit{k} configuraciones de meta-learning y usando su resultado para inicializar el proceso de optimización.
 
 Mediante meta-learning, se intenta ganar perspectiva sacada de los meta-datos de experimentos de aprendizaje automático. Los resultados de cada entrenamiento son guardados con caracterizaciones del dataset y sus detalles de rendimiento, y son usados en las ejecuciones futuras. En los recientes años se ha desarrollado un substancial interés en el campo de meta-learning y muchos sistemas de AutoML lo han integrado~\cite{fuerer2015efficient, maher2019smartml, drori2018alphad3m, yang2018oboe, zimmer2021auto, Feurer2020AutoSklearn2T}.
 
@@ -46,7 +46,7 @@ Esta tesis forma parte de las líneas de investigación del grupo de Inteligenci
 
 El objetivo general de esta tesis es el diseño de una estrategia de meta-learning para métodos genéricos de AutoML, a partir de la combinación de técnicas de aprendizaje automático y optimización. La estrategia implementada tendrá el objetivo de acelerar el proceso de búsqueda de AutoML añadiendo conocimiento previo, de tal manera que se obtengan mejores resultados en el mismo período de tiempo.
 
- Dado un dataset, una tarea de evaluación (por ejemplo, clasificación o regresión), el algoritmo de meta-learning propuesto tiene el objetivo de producir una lista de ranking de los modelos candidatos basada en el rendimiento esperado de estos modelos en el dataset dado. Esta lista es producida solamente con meta-conocimiento ganado del análisis de datasets relacionados y el entrenamiento de combinaciones de algoritmos en dichos datasets, sin ejecutar ninguno de los algoritmos candidatos. Teniendo este meta-conocimiento, es posible estimar el rendimiento de esos flujos y sugerirlos. Esta estimación, aunque no es exacta, mejorará el proceso de búsqueda de sistemas de aprendizaje de máquinas automático. Para realizar esto será necesario:
+ Dado un dataset, una tarea de evaluación (por ejemplo, clasificación o regresión), el algoritmo de meta-learning propuesto tiene el objetivo de producir una lista de los modelos candidatos, basada en el rendimiento esperado de estos modelos en el dataset dado. Esta lista es producida solamente con meta-conocimiento ganado del análisis de datasets relacionados y el entrenamiento de combinaciones de algoritmos en dichos datasets, sin ejecutar ninguno de los algoritmos candidatos. Teniendo este meta-conocimiento, es posible estimar el rendimiento de esos flujos y sugerirlos. Esta estimación, aunque no es exacta, mejorará el proceso de búsqueda de sistemas de aprendizaje de máquinas automático. Para realizar esto será necesario:
  
  %El resultado obtenido tiene como objetivo sugerir rápidamente algunas inicializaciones para AutoGOAL. 
 
@@ -77,4 +77,4 @@ El enfoque de meta-learning propuesto, está compuesto por dos fases principales
 %	\item[Recomendaciones:] presenta algunas recomendaciones para estudios futuros.
 %\end{description}
 
-El resto de la tesis está organizada de la siguiente manera. El Capítulo~\ref{chapter:review} introduce los problemas de meta-learning y AutoML y las técnicas que a menudo son aplicadas para tratar con estos problemas. Esto es seguido por un resumen de los trabajos relacionados de meta-learning para la selección de algoritmos y de distintas herramientas de AutoML. Luego, en el Capítulo~\ref{chapter:proposal} se describe la estrategia de meta-learning propuesta para AutoML, incluyendo un análisis de las meta-características usadas y las estrategias desarrolladas. En el Capítulo~\ref{chapter:results} se exponen brevemente los aspectos de la metodología experimental adoptada, se investigan los resultados obtenidos y se realiza una discusión de los mismos. Posteriormente, se presentan las conclusiones finales de esta tesis y algunas recomendaciones para estudios futuros.
+El resto de la tesis está organizada de la siguiente manera. El Capítulo~\ref{chapter:review} introduce los problemas de meta-learning y AutoML y las técnicas que a menudo son aplicadas para tratar con estos problemas. Esto es seguido por un resumen de los trabajos relacionados con meta-learning para la selección de algoritmos y de distintas herramientas de AutoML. Luego, en el Capítulo~\ref{chapter:proposal} se describe la estrategia de meta-learning propuesta para AutoML, incluyendo un análisis de las meta-características usadas y las estrategias desarrolladas. En el Capítulo~\ref{chapter:results} se exponen brevemente los aspectos de la metodología experimental adoptada, se investigan los resultados obtenidos y se realiza una discusión de los mismos. Posteriormente, se presentan las conclusiones finales de esta tesis y algunas recomendaciones para estudios futuros.
