--- a/MainMatter/Proposal.tex
+++ b/MainMatter/Proposal.tex
@@ -89,16 +89,16 @@ Debido a la complejidad computacional requerida para el cálculo de los últimos
 		\item[Coeficiente de variación:] evalúa la normalización de la desviación estándar de la variable aleatoria X con respecto a su valor medio: $VarCoeff_X =  \dfrac{std_x}{\overline{X}}$
 		\item[Covarianza media:] la covarianza expresa la relación lineal entre dos variables aleatorias $X = x_1, ..., x_k$ y $Y = y_1, ..., y_k$ y está definida como: $Cov(X, Y) = \sum^k_{i=1} \dfrac{(x_i - \overline{X})(y_i - \overline{Y})}{k-1}$. La media de la covarianza entre todos los pares de atributos se usa como medida de covarianza de todo el dataset.
 		\item[Coeficiente de correlación lineal:] análisis de correlación que intenta medir la fuerza de una relación entre dos variables aleatorias $X$ y $Y$. Puede ser estimado utilizando la siguiente fórmula: $\rho_{X, Y} = \dfrac{Cov(X, Y)}{\sqrt{std_X std_Y}}$. Como coeficiente de correlación lineal de todo el dataset se usa el promedio de las correlaciones entre todos los pares de atributos.
-		\item[\textit{Skewness} (Oblicuidad):] mide la falta de simetría en la distribución de una variable aleatoria X, en este caso todo el dataset, para cada uno de los atributos. Está definido como $Skew_X = \dfrac{1}{std_X^3}\dfrac{\sum_{i=1}^{k}(x_i - \overline{X})^3}{k}$.  El resultado es un \texttt{array}, que es caracterizado devolviendo el valor medio, máximo, mínimo y la desviación estándar.
-		\item[Curtosis:] mide el grado de concentración que presentan los valores de una variable alrededor de la zona central de la distribución de frecuencias, en este caso todo el dataset. Está definido como $Kurt_X = \dfrac{1}{std^4_X}\dfrac{\sum_{i=1}^{k}(x_i - \overline{X})^4}{k}$. El resultado es un \texttt{array}, que es caracterizado devolviendo el valor medio, máximo, mínimo y la desviación estándar.
-		\item[PCA (\textit{Principal Component Analysis}, Análisis de los Componentes Principales):] es un método para transformar un determinado dataset en un nuevo dataset de dimensiones reducidas, para concentrar la información sobre las diferencias entre las instancias en un pequeño número de dimensiones. En PCA, el primer componente es un vector que representa la dirección de máxima varianza. Por estas razones se realiza el análisis de los componentes principales, y se retorna el \textit{skewnes} y la curtosis del primer vector.
+		\item[\textit{Skewness} (Oblicuidad):] mide la falta de simetría en la distribución de una variable aleatoria X, en este caso todo el dataset, para cada uno de los atributos. Está definido como $Skew_X = \dfrac{\sum_{i=1}^{k}(x_i - \overline{X})^3}{(k-1)*std_X^3}$.  El resultado es un \texttt{array}, que es caracterizado devolviendo el valor medio, máximo, mínimo y la desviación estándar.
+		\item[Curtosis:] mide el grado de concentración que presentan los valores de una variable alrededor de la zona central de la distribución de frecuencias, en este caso todo el dataset. Está definido como $Kurt_X = \dfrac{\sum_{i=1}^{k}(x_i - \overline{X})^4}{k*std^4_X}$. El resultado es un \texttt{array}, que es caracterizado devolviendo el valor medio, máximo, mínimo y la desviación estándar.
+		\item[PCA (\textit{Principal Component Analysis}, Análisis de los Componentes Principales):] es un método para transformar un determinado dataset en un nuevo dataset de dimensiones reducidas, para concentrar la información sobre las diferencias entre las instancias en un pequeño número de dimensiones. En PCA, el primer componente es un vector que representa la dirección de máxima varianza. Por estas razones se realiza el análisis de los componentes principales, y se retorna el \textit{skewness} y la curtosis del primer vector.
 	\end{description}
 	\item \underline{\textsc{Teóricos de la Información}}: \begin{description}
 		\item[Entropía normalizada de una clase:]  el valor de entropía $H(C)$ de una variable $C$ indica cuanta información es necesaria para especificar una clase (etiqueta). El valor de entropía $H(C)$ es evaluado usando la siguiente fórmula: $H(C) = \sum^n_{i=1}p_i log_2(p_i)$, donde $p_i$ es la probabilidad (frecuencia relativa) de ocurrencia de una clase $i$. Cuando suponemos que cada clase en un dataset tiene la misma probabilidad de aparecer, entonces el valor máximo teórico para la entropía de una clase es $log_2(n)$, por lo tanto, la entropía normalizada es calculada como: $H(C)_{norm} = \dfrac{H(C)}{log_2(n)}$
 		\item[Entropía normalizada de un atributo:] el valor de entropía H(X) de un atributo X mide la información relacionada con los valores que X puede tener. La entropía normalizada de un atributo se calcula con la misma fórmula anterior: $H(X)_{norm} = \dfrac{H(X)}{log_2(n)}$. Para retornar un valor representado la entropía de todo el dataset se calcula la entropía de cada uno de sus atributos, y de estos valores es devuelto la media, el mínimo, el máximo y la desviación estándar.
 		\item[Entropía conjunta:] mide la entropía total del sistema combinado de variables, es decir, de un par de variables (C, X), los cuales están representados por una variable de clase y uno de los M atributos de entrada discretizados respectivamente. Si $p_{ij}$ representa la probabilidad conjunta de observar el i-ésimo valor del atributo X y el j-ésimo valor de clase, la entropía conjunta está definida como: $H(C, X) = \sum_{i \in X, j \in C} p_{ij} log_2(p_{ij})$. Después de calcular la entropía para cada par clase-atributo, de estos valores se devuelve la media, el mínimo, el máximo y la desviación estándar.
 		\item[Información mutua de clase y atributo:] mide la información común compartida entre dos variables aleatorias C y X. Si C y X representan una variable de clase y un atributo de entrada respectivamente, entonces esta meta-característica mide la información contenida por el atributo X sobre una variable de clase y describe la reducción de incertidumbre para C debido al conocimiento de X. La información mutua de clase y atributo es evaluada usando la fórmula: $MI(C, X) = H(C) + H(X) - H(C, X)$. Como medida para describir todo el dataset, se calcula la entropía para cada par clase-atributo, de estos valores se devuelve la media, el mínimo, el máximo y la desviación estándar.
-		\item[Número equivalente de atributos:] en lo referente a las tareas de clasificación, la información requerida para especificar una clase es $H(C)$ y ningún sistema de clasificación puede ser completamente existoso a no ser que se proporcione  $H(C)$ pedazos de información. Esta meta-característica proporciona información sobre la complejidad de un problema, específicamente el número de atributos de un dataset determinado que es adecuado para resolver la tarea de clasificación. Es evaluada mediante la proporción entre la entropía de clase $H(C)$ y el promedio de la información mutua $\overline{MI(C, X)}$ como: $EN_{attr} = \dfrac{H(C)}{\overline{MI(C, X}}$
+		\item[Número equivalente de atributos:] en lo referente a las tareas de clasificación, la información requerida para especificar una clase es $H(C)$ y ningún sistema de clasificación puede ser completamente exitoso a no ser que se proporcione  $H(C)$ pedazos de información. Esta meta-característica proporciona información sobre la complejidad de un problema, específicamente el número de atributos de un dataset determinado que es adecuado para resolver la tarea de clasificación. Es evaluada mediante la proporción entre la entropía de clase $H(C)$ y el promedio de la información mutua $\overline{MI(C, X)}$ como: $EN_{attr} = \dfrac{H(C)}{\overline{MI(C, X}}$
 		\item[Relación de la señal de ruido:]  mide la cantidad de información irrelevante contenida en un dataset. Si se considera $\overline{MI(C, X)}$ como una medida de información útil de una clase y $\overline{H(X)} - \overline{MI(C, X)}$ como una medida de información no útil, la meta-característica puede ser evaluado como: $NS.ratio = \dfrac{\overline{H(X)} - \overline{MI(C, X}}{\overline{MI(C, X)}}$
 	\end{description}
 	\item \textsc{\underline{Específicos de AutoGOAL}}: \begin{description}
@@ -266,7 +266,7 @@ Los algoritmos contenidos en los flujos de algoritmos que genera AutoGOAL tienen
 
 Se utilizaron solo los algoritmos sin sus hiperparámetros para que el meta-modelo sepa cuáles algoritmos tienen un buen rendimiento, de manera general, en un dataset determinado. Sin embargo, para cada secuencia de algoritmos en un dataset se pueden recuperar los algoritmos con sus hiperparámetros, ya que estos están guardados en la base de conocimiento. En el caso de que exista una secuencia igual de algoritmos en un mismo dataset se puede considerar el flujo con mejor resultado de rendimiento. Al final, cuando el meta-modelo genera un ranking, la secuencia de números es descodificada y los hiperparámetros de los algoritmos que componen el flujo de algoritmos son retornados. Por lo tanto, en el ranking final se recuperan los hiperparámetros de los algoritmos seleccionados.
 
-En la segunda fase de la estrategia, los flujos de algoritmos candidatos pre-procesados son concatenados con el vector de características del nuevo dataset, formando los meta-datos, y son presentados al meta-modelo. Como resultado, el meta-modelo retorna un ranking basado en el rendimiento esperado de cada uno de los flujos en el dataset. Se retorna una lista con los \texttt{k} mejores flujos y, como se mencionó anteriormente, estos flujos son post-procesados para obtener los hiperparámetros con los que fueron utilizados en su dataset original. En el Algoritmo~\ref{alg:ranker.proc} se resumen todos los pasos seguidos para la generación del ranking final.
+En la segunda fase de la estrategia, los flujos de algoritmos candidatos pre-procesados son concatenados con el vector de características del nuevo dataset, formando los meta-datos, y son presentados al meta-modelo. Como resultado, el meta-modelo retorna un ranking basado en el rendimiento esperado de cada uno de los flujos en el dataset. Se retorna una lista con los \texttt{k} mejores flujos y, como se mencionó anteriormente, estos flujos son pos-procesados para obtener los hiperparámetros con los que fueron utilizados en su dataset original. En el Algoritmo~\ref{alg:ranker.proc} se resumen todos los pasos seguidos para la generación del ranking final.
  
 % For the training of our meta-learner, we used XGBoost [7]. More specifically, we used the XGBRanker model with the pairwise rank- ing objective function and shallow trees of 150 estimators. This was done since our problem is in its essence a ranking problem, and previous work [4] has shown that XBGoost is highly suitable for producing ranked lists. Additionally, we used the following hyper- parameters settings: learning rate of 0.1, max depth of 8 and 150 estimators. We set the number of pipelines returned by RankML to k = 10. The algorithm’s parameters were empirically set using the leave-one-out approach.
 
