--- a/Thesis.tex
+++ b/Thesis.tex
@@ -92,7 +92,7 @@
 
 \title{Una estrategia de Meta-Learning para flujos genéricos de AutoML}
 \author{Loraine Monteagudo García}
-\advisor{\\Msc. Suilan Estévez Velarde \\
+\advisor{\\Msc. Suilan Estévez Velarde, \\
 		Lic. Daniel Alejandro Valdés Pérez}
 \degree{Licenciado en Ciencia de la Computación}
 \faculty{Facultad de Matemática y Computación}
